Feat: setup code push android

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "build-ios": "react-native bundle --entry-file index.js --platform ios --dev false --bundle-output ios/main.jsbundle --assets-dest ios",
     "build-android": "react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res",
     "clean": "react-native-clean-project",
+    "clear": "watchman watch-del-all && rm -rf /tmp/metro-bundler-cache-* && rm -rf /tmp/haste-map-react-native-packager-* && react-native start --reset-cache",
     "clean-all": "npx react-native clean-project-auto"
   },
   "dependencies": {
@@ -43,6 +44,7 @@
     "mobx-state-tree": "5.1.5",
     "react": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-code-push": "^7.0.5",
     "react-native-gesture-handler": "2.4.2",
     "react-native-keychain": "8.0.0",
     "react-native-safe-area-context": "4.3.1",
