--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -85,6 +85,7 @@ project.ext.react = [
 
 // This method of including other gradle files is to support symlinks.
 apply from: new File(["node", "--print", "require.resolve('react-native/package.json')"].execute().text.trim(), "../react.gradle");
+apply from: "../../node_modules/react-native-code-push/android/codepush.gradle"
 
 /**
  * Set this to true to create two separate APKs instead of one:
