--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -5,7 +5,8 @@ apply from: new File(["node", "--print", "require.resolve('expo/package.json')"]
 useExpoModules()
 apply from: new File(["node", "--print", "require.resolve('@react-native-community/cli-platform-android/package.json')"].execute().text.trim(), "../native_modules.gradle");
 applyNativeModulesSettingsGradle(settings)
-
+include ':app', ':react-native-code-push'
+project(':react-native-code-push').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-code-push/android/app')
 include ':app'
 
 includeBuild('../node_modules/react-native-gradle-plugin')
